# MultimodalTaxonomy

./: main.py  playground.ipynb  pyproject.toml
apply_taxonomy/: apply_taxonomy_main.py  input_output_utils.py  structured_outputs.py  vllms.py
prompts/: full_taxonomy.json  main_flat_prompt.txt  taxonomy_flowchart.json
results/: vlm_outputs_gemma3.csv
