[project]
name = "multimodaltaxonomy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.61",
    "black>=25.1.0",
    "httpx-ws>=0.7.2",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "qwen-vl-utils>=0.0.11",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]
